--- a/cssLogin.css
+++ b/cssLogin.css
@@ -45,7 +45,9 @@ body::-webkit-scrollbar {
     margin-top: 8%; 
     margin-bottom: 10px; 
 }  
-
+#Botao{
+  width: 100%;
+}
 #Text-Nome{
     font-family: "Courier New", Courier, monospace; 
         font-size: 20px; 
@@ -54,6 +56,14 @@ body::-webkit-scrollbar {
         margin-top: 20px; 
         margin-bottom: 20px; 
         text-align: center;
+}
+.Sobre_seccao{
+      text-align: justify;
+      font-family: sans-serif;
+      font-size: 18px; 
+      line-height: 22.3px; 
+      color: #2b272794; 
+      margin-top: 25px;
 }
 #sobre_Nome{
     text-align: justify;
@@ -109,8 +119,8 @@ body::-webkit-scrollbar {
 }
 
 .resumo_1 {
-    color: inherit; /* Herda a cor do texto do elemento pai */
-    text-decoration: none; /* Remove o sublinhado padrão dos links */
+    color: inherit;  
+    text-decoration: none;  
 }
 
 .noticia {
@@ -130,6 +140,9 @@ body::-webkit-scrollbar {
     
   }
   
+  .card-body{
+    height: 10em;
+  }
   .descricao {
     text-align: justify;
     font-size: 15px;
